# internal/handler/response/category.go
@@ -1,0 +1,14 @@
+package response
+
+import "time"
+
+type CategoryResponse struct {
+	ID        string    `json:"id"`
+	Name      string    `json:"name"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
+
+type CategoryListResponse struct {
+	Categories []CategoryResponse `json:"categories"`
+}
